<resources>
    <string name="app_name">위시버니</string>
    <string name="some_id">
        천리길도 한 걸음부터\n당신의 소망을 담아보세요!
    </string>
    <string name="select_date">
        날짜를 선택하세요
    </string>
    <string name="want_do">
        하고 싶어요
    </string>
    <string name="want_eat">
        먹고 싶어요
    </string>
    <string name="want_get">
        갖고 싶어요
    </string>
    <string name="insert">
        등록
    </string>
    <string name="update">
        수정 완료
    </string>
    <string name="delete">
        삭제
    </string>
    <string name="wish_content">
        소망을 입력하세요
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- 온보딩 -->
    <string name="onboarding_1_title">내가 하고 싶은 것을\n고민해본 적 있나요?</string>
    <string name="onboarding_1_content">하고 싶어요, 먹고 싶어요, 갖고 싶어요\n세 가지 카테고리를 채워보세요</string>
    <string name="onboarding_2_title">적는 시간은\n30초도 안 걸려요</string>
    <string name="onboarding_2_content">당장 생각난 나만의 버킷리스트도\n30초면 작성이 가능해요</string>
    <string name="onboarding_title2">적는 시간은\n30초도 안 걸려요</string>
    <string name="onboarding_login_content">위시버니와 함께\n소망을 나눠보세요</string>

    <!-- 친구 리스트-->
    <string name="hyeyeon">혜연</string>
    <string name="dialog_check">네</string>
    <string name="dialog_cancle">아니오</string>
    <string name="confirm_remove">친구 삭제</string>
    <string name="confirm_remove_question">정말 삭제하시겠습니까?</string>

    <!-- 친구 초대-->
    <string name="invite">함께 할 친구에게\n 초대코드를 공유해주세요!</string>
    <string name="invite_code">초대코드 복사</string>
    <string name="invite_copy">복사하기</string>
    <string name="invite_result">매칭 확인하기</string>


    <!-- 친구 매칭-->
    <string name="match">초대받은 코드를\n 붙여넣거나 입력해주세요</string>
    <string name="match_input">초대코드를 입력해주세요</string>
    <string name="match_start">위시버니와 함께 하기</string>

    <!-- 마이 페이지 -->
    <string name="wish_do">하고 싶어요</string>
    <string name="wish_eat">먹고 싶어요</string>
    <string name="wish_get">갖고 싶어요</string>

</resources>