<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/some_id"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp"
            android:layout_marginTop="173dp"
            android:background="@drawable/some_id" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp"
            android:layout_marginTop="173dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/ivory"
                android:textColor="@color/black"
                android:text="@string/want_do"
                />

            <Button
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/ivory"
                android:textColor="@color/black"
                android:text="@string/want_eat" />

            <Button
                android:id="@+id/button3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/ivory"
                android:textColor="@color/black"
                android:text="@string/want_get" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp"
            android:layout_marginTop="411dp"
            android:background="@drawable/select_day" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp"
            android:layout_marginTop="70dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvSelectedDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:textSize="16sp"
                android:textColor="@color/black"
              />
        </LinearLayout>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp"
            android:layout_marginTop="500dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- 여러 개의 해시태그 버튼을 추가합니다. -->
                <Button
                    android:id="@+id/hashtagButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onHashtagButtonClick"
                    android:backgroundTint="@color/ivory"
                    android:textColor="@color/black"
                    android:text="#Tag1" />
            </LinearLayout>
        </HorizontalScrollView>

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="108dp"
            android:layout_height="115dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            app:srcCompat="@drawable/img" />


        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:layout_marginTop="80dp"
            android:text="@string/some_id"
            android:textStyle="bold"/>
       <!--     android:textAppearance="@style/some_id" />-->

        <Button
            android:id="@+id/updateBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="570dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/pink"
            android:text="@string/update" />

        <Button
            android:id="@+id/deleteBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="220dp"
            android:layout_marginTop="570dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/pink"
            android:text="@string/delete" />

        <TextView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp"
            android:layout_marginTop="250dp"
            android:background="@drawable/content_id"
            android:ems="10"
            android:textSize="17sp"
            android:text="@string/wish_content" />

        <ImageButton
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/arrow_back" />

    </FrameLayout>
    <!-- drawable/some_id.xml -->
</RelativeLayout>