<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

        <View
            android:id="@+id/some_id"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp"
            android:layout_marginTop="153dp"
            android:background="@drawable/some_id" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp"
            android:layout_marginTop="153dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/to_do"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/ivory"
                android:textColor="@color/black"
                android:text="@string/want_do"
                />

            <Button
                android:id="@+id/to_eat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/ivory"
                android:textColor="@color/black"
                android:text="@string/want_eat" />

            <Button
                android:id="@+id/to_get"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/ivory"
                android:textColor="@color/black"
                android:text="@string/want_get" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp"
            android:layout_marginTop="380dp"
            android:background="@drawable/select_day"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="380dp"
            android:layout_marginEnd="22dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnOpenCalendar"
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/img_date"
                android:onClick="onCalendarButtonClick" />

            <TextView
                android:id="@+id/tvSelectedDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="13dp"
                android:layout_marginStart="10dp"
                android:hint="@string/select_date"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageButton
                android:id="@+id/reset"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="11dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/cancel" />

        </LinearLayout>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp"
            android:layout_marginTop="460dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- 여러 개의 해시태그 버튼을 추가합니다. -->
                <Button
                    android:id="@+id/hashtagButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onHashtagButtonClick"
                    android:backgroundTint="@color/ivory"
                    android:textColor="@color/black"
                    android:text="#여행" />

                <Button
                    android:id="@+id/hashtagButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onHashtagButtonClick"
                    android:backgroundTint="@color/ivory"
                    android:textColor="@color/black"
                    android:text="#데이트" />

                <Button
                    android:id="@+id/hashtagButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onHashtagButtonClick"
                    android:backgroundTint="@color/ivory"
                    android:textColor="@color/black"
                    android:text="#취업" />

                <Button
                    android:id="@+id/hashtagButton4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onHashtagButtonClick"
                    android:backgroundTint="@color/ivory"
                    android:textColor="@color/black"
                    android:text="#운동" />

                <Button
                    android:id="@+id/hashtagButton5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onHashtagButtonClick"
                    android:backgroundTint="@color/ivory"
                    android:textColor="@color/black"
                    android:text="#자기계발" />

                <Button
                    android:id="@+id/hashtagButton6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onHashtagButtonClick"
                    android:backgroundTint="@color/ivory"
                    android:textColor="@color/black"
                    android:text="#맛집" />

                <Button
                    android:id="@+id/hashtagButton7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onHashtagButtonClick"
                    android:backgroundTint="@color/ivory"
                    android:textColor="@color/black"
                    android:text="#스터디" />

                <Button
                    android:id="@+id/hashtagButton8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onHashtagButtonClick"
                    android:backgroundTint="@color/ivory"
                    android:textColor="@color/black"
                    android:text="#일상" />
            </LinearLayout>
        </HorizontalScrollView>

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="108dp"
            android:layout_height="115dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            app:srcCompat="@drawable/img" />


        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="59dp"
            android:layout_marginStart="160dp"
            android:layout_marginTop="80dp"
            android:text="@string/some_id"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/insert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:layout_marginTop="530dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/pink"
            android:text="@string/insert" />

        <EditText
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp"
            android:layout_marginTop="220dp"
            android:background="@drawable/content_id"
            android:ems="10"
            android:textSize="17sp"
            android:hint="@string/wish_content" />

        <ImageButton
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/arrow_back" />

</FrameLayout>