<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".wish.WishList">

    <TextView
        android:id="@+id/buketBasText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="토리"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="7dp"
        android:text="님이"
        android:textSize="23sp"
        app:layout_constraintStart_toEndOf="@+id/buketBasText"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_acheivetext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="꼭 이룰 거예요"
        android:textSize="23sp"
        app:layout_constraintStart_toStartOf="@+id/buketBasText"
        app:layout_constraintTop_toBottomOf="@+id/buketBasText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/GetDoneButton"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_border"
        android:paddingHorizontal="20dp"
        android:text="지금까지 1개를 이뤘어요!"
        android:textColor="@color/wishbunny_pink"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/buketBasText"
        app:layout_constraintTop_toBottomOf="@+id/tv_acheivetext" />

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/GetDoneButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/wishbunny_background"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/want_do" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:backgroundTint="@color/wishbunny_background"
            android:textColor="@color/black"
            android:text="@string/want_eat" />

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:backgroundTint="@color/wishbunny_background"
            android:textColor="@color/black"
            android:text="@string/want_get" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/wishList_recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
